--- a/docs/package.json
+++ b/docs/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.0.0-rc.1",
     "@vuepress/plugin-google-analytics": "^1.0.0-alpha.0",
-    "vuepress": "^1.0.0-alpha.30",
+    "vuepress": "^1.2.0",
     "vuepress-plugin-container": "^2.0.2"
   },
   "dependencies": {
@@ -36,5 +36,11 @@
     "vuepress-intercom": "^1.0.3",
     "vuepress-plugin-google-tag-manager": "0.0.3",
     "vuepress-plugin-sitemap": "^2.3.0"
+  },
+  "resolutions": {
+    "js-yaml": ">=3.13.1",
+    "lodash": ">=4.17.12",
+    "mixin-deep": ">=1.3.2",
+    "set-value": ">=2.0.1"
   }
 }
